--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,103 @@
-.App {
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.App{
+  display: flex;
+  flex-direction: column;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  background-color: #2a72f81e;
+  height: 100%;
+}
+
+.title{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  line-height: 1.2;
+}
+
+.main-title{
+  font-size: 40px;
+  margin-top: 30px;
+  color: #2a72f8;
+}
+
+.sub-title{
+  font-size: 25px;
+  margin-top: 20px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.bill-entry, .customer-cash{
+  width: 100%;
+  height: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  flex-direction: column;
+  margin-top: 30px;
+}
+
+label{
+  font-size: 25px;
+}
+
+.bill-amount, .cash-given{
+  font-size: 25px;
+  border: 2px solid #2a72f8;
+  border-radius: 10px;
+  padding: 5px;
+}
+
+.notes-returned{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.notes-btn {
+  border-radius: 15px;
   color: white;
+  font-size: 20px;
+  font-weight: bold;
+  background: #2a72f8;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  border: 2px solid #000000;
+  margin-top: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.notes-btn:hover {
+  background: #055cfd;
+  text-decoration: none;
+  cursor: pointer;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.message{
+  font-size: 25px;
+  margin-top: 30px;
+  text-align: center;
+}
+
+.notes-returned{
+  margin-top: 10px;
+  width: 100%;
+  height: 100%;
+  font-size: 28px;
+}
+
+table{
+  border-collapse: collapse
+}
+
+td, th{
+  padding: 15px;
+  border: 2px solid #2a72f8;
 }
