--- a/src/App.css
+++ b/src/App.css
@@ -90,14 +90,16 @@ label{
   margin-top: 10px;
   width: 100%;
   height: 100%;
-  font-size: 28px;
+  font-size: 24px;
 }
 
 table{
-  border-collapse: collapse
+  border-collapse: collapse;
+  white-space: nowrap;
 }
 
 td, th{
-  padding: 15px;
+  padding: 20px;
   border: 2px solid #2a72f8;
+  text-align: center;
 }
